--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		<div class="shadow sm:rounded-md sm:overflow-hidden">
 			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
-				<div class="ml-5 space-y-5">
+				<div class="mx-5 space-y-5">
 				<img class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark1-windows-chrome%402x.png?v=1568210258262" alt="A graphic showing how to turn on the bookmarks bar">
 				<p class="text-md text-clip overflow-hidden max-w-[650px]">If you're using Chrome, click the options icon to the right of your URL bar, select Bookmarks, then make sure Show bookmarks bar is selected.</p>
 				<h1 class="text-1xl font-bold">Instructions for other platforms: </h1>
 
-				<ul class="list-disc">
+				<ul class="list-disc mx-6">
             <li>
               Windows:&nbsp;
               <ul class="inline-block p-0 m-0">
