--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
 	<div class="flex flex-col mt-5 items-center content-center space-y-4">
 		<div class="shadow sm:rounded-md sm:overflow-hidden">
-			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800 min-w-[400px] max-w-[750px]">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
 				<div class="mx-5 space-y-5">
 				<img class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark1-windows-chrome%402x.png?v=1568210258262" alt="A graphic showing how to turn on the bookmarks bar">
 				<p class="text-md text-clip overflow-hidden max-w-[650px]">If you're using Chrome, click the options icon to the right of your URL bar, select Bookmarks, then make sure Show bookmarks bar is selected.</p>
 				<h1 class="text-1xl font-bold">Instructions for other platforms: </h1>
 
-				<ul class="list-disc mx-6">
+				<ul class="list-disc mx-7">
             <li>
               Windows:&nbsp;
               <ul class="inline-block p-0 m-0">
@@ -54,10 +54,16 @@
 
 		</div>
 		<div class="shadow sm:rounded-md sm:overflow-hidden">
-			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800 min-w-[400px] max-w-[750px]">
+								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
+				<div class="mx-5 space-y-5">
+				<img class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-firefox%402x.png?v=1568210257038" alt="A graphic showing how to drag the bookmarklet to the booksmarks bar">
+				<p class="text-md text-clip overflow-hidden max-w-[650px]">Click and drag this button to your bookmark toolbar to install X-Ray Goggles.</p>
 				<a class="ml-5 bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-2 px-4 border-b-4 rounded-full"
 				 href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())"><span class="fa-solid fa-arrows-up-down-left-right"></span><span class="label ml-1">X-Ray Goggles</span></a>
 			</div>
+			</div>
+
 		</div>
 	</div>
 <!-- 
