--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
 	<div class="flex flex-col mt-5 items-center content-center space-y-4">
-		<div class="shadow sm:rounded-md sm:overflow-hidden">
-			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800 sm:max-w-[750px]">
+		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
 				<div class="mx-5 space-y-5">
 				<img class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark1-windows-chrome%402x.png?v=1568210258262" alt="A graphic showing how to turn on the bookmarks bar">
@@ -53,8 +53,8 @@
 			</div>
 
 		</div>
-		<div class="shadow sm:rounded-md sm:overflow-hidden">
-			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800 sm:max-w-[750px]">
+		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
 				<div class="mx-5 space-y-5">
 				<img class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-firefox%402x.png?v=1568210257038" alt="A graphic showing how to drag the bookmarklet to the booksmarks bar">
