--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
 </head>
 
 <body>
-	<div class="flex flex-col mt-5 items-center content-center space-y-4">
+	<div class="">
+	<header class="bg-red-500 shadow">
+  <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+    <h1 class="text-3xl font-bold text-white text-center">X-Ray Goggles</h1>
+  </div>
+</header>
+   <h1 class="text-2xl">Remix Any Page on the Web</h1>
+<p>
+	X-Ray Goggles makes it easy to see and remix the code behind your favorite web pages. The best part: you don't need any prior coding experience! Just activate Goggles, click on a section, and edit. Then, share your remixes with others.
+</p>
+   <h1 class="text-2xl">How to get started:</h1>
+	<div class="flex flex-col mx-5 mt-5 items-center content-center space-y-4">
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
 			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
@@ -66,6 +77,8 @@
 
 		</div>
 	</div>
+	</div>
+
 <!-- 
 <figure class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800">
   <img class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="/sarah-dayan.jpg" alt="" width="384" height="512">
