--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <h1 class="text-3xl font-bold text-white text-center">X-Ray Goggles</h1>
   </div>
 </header>
-<div class="pt-5 font-bold">
+<div class="pt-5 font-bold text-center">
    <h1 class="text-2xl">Remix Any Page on the Web</h1>
-<p class="text-sm">
+<p class="text-sm font-normal">
 	X-Ray Goggles makes it easy to see and remix the code behind your favorite web pages. The best part: you don't need any prior coding experience! Just activate Goggles, click on a section, and edit. Then, share your remixes with others.
 </p>
    <h1 class="text-2xl">How to get started:</h1>
@@ -71,7 +71,7 @@
 								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
 				<div class="mx-5 space-y-5">
 				<img class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-firefox%402x.png?v=1568210257038" alt="A graphic showing how to drag the bookmarklet to the booksmarks bar">
-				<p class="text-md text-clip overflow-hidden max-w-[650px]">Click and drag this button to your bookmark toolbar to install X-Ray Goggles.</p>
+				<p class="text-md text-clip overflow-hidden">Click and drag this button to your bookmark toolbar to install X-Ray Goggles.</p>
 				<a class="w-full flex items-center justify-center  bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-2 px-4 border-b-4 rounded-full"
 				 href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())"><span class="fa-solid fa-arrows-up-down-left-right"></span><span class="label ml-1">X-Ray Goggles</span></a>
 			</div>
