--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <h1 class="text-3xl font-bold text-white text-center">X-Ray Goggles</h1>
   </div>
 </header>
-<div class="pt-5 font-bold text-center">
+<div class="pt-5 font-bold space-y-6">
    <h1 class="text-2xl">Remix Any Page on the Web</h1>
 <p class="text-sm font-normal">
 	X-Ray Goggles makes it easy to see and remix the code behind your favorite web pages. The best part: you don't need any prior coding experience! Just activate Goggles, click on a section, and edit. Then, share your remixes with others.
 </p>
    <h1 class="text-2xl">How to get started:</h1>
 </div>
-	<div class="flex flex-col mt-5 items-center content-center space-y-4">
+	<div class="flex flex-col mt-5 items-center justify-center space-y-4">
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
 			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
