--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>replit</title>
+	<title>X-Ray Goggles</title>
 	<script src="https://cdn.tailwindcss.com">
 
 	</script>
@@ -75,6 +75,16 @@
 				<a class="w-full flex items-center justify-center  bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-2 px-4 border-b-4 rounded-full"
 				 href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())"><span class="fa-solid fa-arrows-up-down-left-right"></span><span class="label ml-1">X-Ray Goggles</span></a>
 			</div>
+			</div>
+
+		</div>
+		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
+				<h1 class="text-2xl font-bold"><span class="select-none">3.</span> Saving Your Work</h1>
+				<div class="mx-5 space-y-5">
+				<p class="text-md text-clip overflow-hidden max-w-[650px]">To save your work we recommend taking a screenshot of the remixed web page.</p>
+
+				</div>
 			</div>
 
 		</div>
