--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@
 
 		</div>
 	</div>
+	<div class="py-8">
+    <div class="w-full border-t border-gray-300"></div>
+</div>
+	<div class="space-y-6">
+      <h3 class="text-2xl">
+        About X-Ray Goggles
+      </h3>
+      
+      <p class="text-sm">
+        X-Ray Goggles was developed by <a href="https://foundation.mozilla.org" target="blank" class="text-indigo-500 hover:text-indigo-800">Mozilla</a>. This version was created by <a href="https://mouse.org/" target="blank" class="text-indigo-500 hover:text-indigo-800">Mouse</a> adapted from the Mozilla version. This version does not support saving and publishing web page remixes, but we recommend taking a screenshot of the remixed page to show your work.
+      </p>
+      
+      <p class="text-sm">
+        If you are looking to learn about the web with tools like X-Ray Goggles, join Mouse's curriculum platform <a href="https://create.mouse.org/" target="blank" class="text-indigo-500 hover:text-indigo-800">Mouse Create</a> for free and check out our Coding course!
+      </p>
+    </div>
 	</div>
 
 <!-- 
