--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 class="text-3xl font-bold text-white text-center">X-Ray Goggles</h1>
   </div>
 </header>
-<div class="pt-5 font-bold space-y-6">
+<div class="pt-5 font-bold space-y-6 sm:mx-[350px]">
    <h1 class="text-2xl">Remix Any Page on the Web</h1>
 <p class="text-sm font-normal">
 	X-Ray Goggles makes it easy to see and remix the code behind your favorite web pages. The best part: you don't need any prior coding experience! Just activate Goggles, click on a section, and edit. Then, share your remixes with others.
@@ -89,10 +89,10 @@
 
 		</div>
 	</div>
-	<div class="py-8">
+	<div class="py-8 sm:mx-[350px] pb-4">
     <div class="w-full border-t border-gray-300"></div>
 </div>
-	<div class="space-y-6">
+	<div class="space-y-6 sm:mx-[350px]">
       <h3 class="text-2xl">
         About X-Ray Goggles
       </h3>
