--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 </head>
 
 <body>
-	<div class="mx-5">
+	<div class>
 	<header class="bg-red-500 shadow mx-0">
   <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
     <h1 class="text-3xl font-bold text-white text-center">X-Ray Goggles</h1>
   </div>
 </header>
+	<div class="mx-5">
+
 <div class="pt-5 font-bold space-y-6 sm:mx-[350px]">
    <h1 class="text-2xl">Remix Any Page on the Web</h1>
-<p class="text-sm font-normal">
+<p class="text-base font-normal">
 	X-Ray Goggles makes it easy to see and remix the code behind your favorite web pages. The best part: you don't need any prior coding experience! Just activate Goggles, click on a section, and edit. Then, share your remixes with others.
 </p>
    <h1 class="text-2xl">How to get started:</h1>
@@ -32,12 +34,12 @@
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
 			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
-				<div class="mx-8 space-y-5">
+				<div class="sm:mx-8 space-y-5">
 				<img id="image1" class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark1-windows-chrome%402x.png?v=1568210258262" alt="A graphic showing how to turn on the bookmarks bar">
 				<p id="text1" class="text-md text-clip overflow-hidden max-w-[650px]">If you're using Chrome, click the options icon to the right of your URL bar, select Bookmarks, then make sure Show bookmarks bar is selected.</p>
 				<h1 class="text-2xl font-bold">Instructions for other platforms: </h1>
 
-				<ul class="list-disc mx-7">
+				<ul class="list-disc mx-5 sm:mx-8">
             <li>
               Windows:&nbsp;
               <ul class="inline-block p-0 m-0">
@@ -69,11 +71,11 @@
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
 			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
-				<div class="mx-8 space-y-5">
-				<img id="image2" class="w-[400px] rounded rounded-md" src="https://cdn.glitch.me/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-chrome%402x.png">
+				<div class="sm:mx-8 space-y-5">
+				<img id="image2" class="w-full sm:w-[400px] rounded rounded-md" src="https://cdn.glitch.me/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-chrome%402x.png">
 				<p class="text-md text-clip overflow-hidden">Click and drag this button to your bookmark toolbar to install X-Ray Goggles.</p>
-				<a class="w-full flex items-center justify-center  bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-2 px-4 border-b-4 rounded-full"
-				 href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())"><span class="fa-solid fa-arrows-up-down-left-right"></span><span class="label ml-1">X-Ray Goggles</span></a>
+				<a class="w-[25rem] flex items-center justify-center  bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-4 px-4 border-b-4 rounded-full"
+				 href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())"><span class="fa-solid fa-arrows-up-down-left-right"></span><span class="label ml-1 font-bold">X-Ray Goggles</span></a>
 			</div>
 			</div>
 
@@ -81,7 +83,7 @@
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
 			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">3.</span> Saving Your Work</h1>
-				<div class="mx-8 space-y-5">
+				<div class="sm:mx-8 space-y-5">
 				<p class="text-md text-clip overflow-hidden max-w-[650px]">To save your work we recommend taking a screenshot of the remixed web page.</p>
 
 				</div>
@@ -97,14 +99,16 @@
         About X-Ray Goggles
       </h3>
       
-      <p class="text-sm">
+      <p class="text-base">
         X-Ray Goggles was developed by <a href="https://foundation.mozilla.org" target="blank" class="text-indigo-500 hover:text-indigo-800">Mozilla</a>. This version was created by <a href="https://mouse.org/" target="blank" class="text-indigo-500 hover:text-indigo-800">Mouse</a> adapted from the Mozilla version. This version does not support saving and publishing web page remixes, but we recommend taking a screenshot of the remixed page to show your work.
       </p>
       
-      <p class="text-sm">
+      <p class="text-base">
         If you are looking to learn about the web with tools like X-Ray Goggles, join Mouse's curriculum platform <a href="https://create.mouse.org/" target="blank" class="text-indigo-500 hover:text-indigo-800">Mouse Create</a> for free and check out our Coding course!
       </p>
     </div>
+    </div>
+
 	</div>
 
 <!-- 
