--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
 				<div class="sm:mx-8 space-y-5">
-				<img id="image2" class="w-full sm:w-[400px] rounded rounded-md" src="https://cdn.glitch.me/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-chrome%402x.png">
+				<img id="image2" class="w-[400px] rounded rounded-md" src="https://cdn.glitch.me/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-chrome%402x.png">
 				<p class="text-md text-clip overflow-hidden">Click and drag this button to your bookmark toolbar to install X-Ray Goggles.</p>
-				<a class="w-[25rem] flex items-center justify-center  bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-4 px-4 border-b-4 rounded-full"
+				<a class="w-full sm:w-[25rem] flex items-center justify-center  bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-4 px-4 border-b-4 rounded-full"
 				 href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())"><span class="fa-solid fa-arrows-up-down-left-right"></span><span class="label ml-1 font-bold">X-Ray Goggles</span></a>
 			</div>
 			</div>
