--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 
 		</div>
 	</div>
-	<div class="py-8 sm:mx-[350px] pb-4">
+	<div class="py-8 sm:mx-[350px]">
     <div class="w-full border-t border-gray-300"></div>
 </div>
-	<div class="space-y-6 sm:mx-[350px]">
+	<div class="space-y-6 sm:mx-[350px] pb-4">
       <h3 class="text-2xl">
         About X-Ray Goggles
       </h3>
