--- a/index-custom.html
+++ b/index-custom.html
@@ -32,7 +32,7 @@
 </div>
 	<div class="flex flex-col mt-5 items-center justify-center space-y-4">
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
-			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
 				<div class="sm:mx-8 space-y-5">
 				<img id="image1" class="w-[400px] rounded rounded-md" src="https://cdn.glitch.com/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark1-windows-chrome%402x.png?v=1568210258262" alt="A graphic showing how to turn on the bookmarks bar">
@@ -69,19 +69,19 @@
 
 		</div>
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
-			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
 				<div class="sm:mx-8 space-y-5">
 				<img id="image2" class="w-[400px] rounded rounded-md" src="https://cdn.glitch.me/4be08ec8-dd6f-4a0e-88a4-0bcf147aa4e8%2Fbookmark2-windows-chrome%402x.png">
 				<p class="text-md text-clip overflow-hidden">Click and drag this button to your bookmark toolbar to install X-Ray Goggles.</p>
-				<a class="w-full sm:w-[25rem] flex items-center justify-center bg-white text-pink-700 font-semibold hover:bg-pink-700 border border-pink-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500 hover:border-transparent hover:text-white font-bold py-4 px-4 border-b-4 rounded-full"
+				<a class="w-full sm:w-[25rem] flex items-center justify-center  bg-white text-blue-700 font-semibold hover:bg-blue-700 border border-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 hover:border-transparent hover:text-white font-bold py-4 px-4 border-b-4 rounded-full"
 				 href="javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())"><span class="fa-solid fa-arrows-up-down-left-right"></span><span class="label ml-1 font-bold">X-Ray Goggles</span></a>
 			</div>
 			</div>
 
 		</div>
 		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
-			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
+			<div class="px-4 py-5 bg-slate-100 space-y-6 sm:p-6 dark:bg-slate-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">3.</span> Saving Your Work</h1>
 				<div class="sm:mx-8 space-y-5">
 				<p class="text-md text-clip overflow-hidden max-w-[650px]">To save your work we recommend taking a screenshot of the remixed web page.</p>
@@ -112,7 +112,7 @@
 	</div>
 
 <!-- 
-<figure class="md:flex bg-pink-100 rounded-xl p-8 md:p-0 dark:bg-pink-800">
+<figure class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800">
   <img class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="/sarah-dayan.jpg" alt="" width="384" height="512">
   <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
     <blockquote>
