--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div class>
-	<header class="bg-red-500 shadow mx-0">
+	<header class="bg-red-500 shadow-xl mx-0">
   <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
     <h1 class="text-3xl font-bold text-white text-center">X-Ray Goggles</h1>
   </div>
@@ -31,7 +31,7 @@
    <h1 class="text-2xl">How to get started:</h1>
 </div>
 	<div class="flex flex-col mt-5 items-center justify-center space-y-4">
-		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+		<div class="shadow-xl sm:rounded-md sm:overflow-hidden shrink-0 grow-0">
 			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
 				<div class="mx-auto max-w-4xl space-y-5">
@@ -68,7 +68,7 @@
 			</div>
 
 		</div>
-		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+		<div class="shadow-xl sm:rounded-md sm:overflow-hidden shrink-0 grow-0">
 			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
 								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
 				<div class="mx-auto max-w-4xl space-y-5">
@@ -80,7 +80,7 @@
 			</div>
 
 		</div>
-		<div class="shadow sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+		<div class="shadow-xl sm:rounded-md sm:overflow-hidden shrink-0 grow-0">
 			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">3.</span> Saving Your Work</h1>
 				<div class="mx-auto max-w-4xl space-y-5">
