--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <h1 class="text-2xl">How to get started:</h1>
 </div>
 	<div class="flex flex-col mt-5 items-center justify-center space-y-4">
-		<div class="shadow-xl sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+		<div class="shadow-xl sm:rounded-md sm:overflow-hidden md:w-[750px]">
 			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">1.</span> Open Your Bookmark Toolbar</h1>
 				<div class="mx-auto max-w-4xl space-y-5">
@@ -68,7 +68,7 @@
 			</div>
 
 		</div>
-		<div class="shadow-xl sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+		<div class="shadow-xl sm:rounded-md sm:overflow-hidden md:w-[750px]">
 			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
 								<h1 class="text-2xl font-bold"><span class="select-none">2.</span> Install X-Ray Goggles</h1>
 				<div class="mx-auto max-w-4xl space-y-5">
@@ -80,7 +80,7 @@
 			</div>
 
 		</div>
-		<div class="shadow-xl sm:rounded-md sm:overflow-hidden sm:w-[750px]">
+		<div class="shadow-xl sm:rounded-md sm:overflow-hidden md:w-[750px]">
 			<div class="px-4 py-5 bg-pink-100 space-y-6 sm:p-6 dark:bg-pink-800">
 				<h1 class="text-2xl font-bold"><span class="select-none">3.</span> Saving Your Work</h1>
 				<div class="mx-auto max-w-4xl space-y-5">
